<resources>
    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_tags_or_title">Search by tags or title</string>
    <string name="title">title</string>
    <string name="tag1">tag1</string>
    <string name="tag3">tag3</string>
    <string name="tag2">tag2</string>
    <string name="description">description</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear All</string>
    <string name="enter_tags">Enter tags</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="delete">Delete</string>
    <string name="urgent">Urgent</string>
    <string name="work">Work</string>
    <string name="relax">Relax</string>
    <string name="enter_additional_tag">Enter additional tag</string>
    <string name="add_tag">Add Tag</string>
</resources>