<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:id="@+id/titleEdit"
        android:inputType="text"
        android:autofillHints="none"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tags"
        android:id="@+id/tagEdit"
        android:inputType="text"
        android:autofillHints="none"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionEdit"
        android:hint="@string/enter_description"
        android:inputType="text"
        android:autofillHints="none"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addBtn"
        android:background="#4280EF"
        android:textColor="@color/white"/>
</LinearLayout>